# TversuCPP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  run_linter.sh
include/common/: InputHandler.hpp  XMath.hpp
include/lab1_2025/: MagneticEnergyCalculator.hpp
include/lab3_2025/: BallRadius.hpp
src/common/: XMath.cpp
src/lab1_2025/: main.cpp
src/lab2_2025/: main.cpp
src/lab3_2025/: main.cpp
src/lab4_2025/: main.cpp
